[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/interface/game/combat/CombatDialogue.gd" type="Script" id=1]
[ext_resource path="res://source/interface/game/combat/CombatUnitInfo.tscn" type="PackedScene" id=2]


[node name="CombatDialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 393.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 586.0
margin_bottom = 312.0
size_flags_vertical = 3

[node name="Attacker" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 288.0
margin_bottom = 312.0

[node name="Separator" type="ColorRect" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 292.0
margin_right = 294.0
margin_bottom = 312.0
rect_min_size = Vector2( 2, 0 )

[node name="Defender" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 298.0
margin_right = 586.0
margin_bottom = 312.0

[node name="Separator" type="ColorRect" parent="Panel/VBoxContainer"]
margin_top = 316.0
margin_right = 586.0
margin_bottom = 318.0
rect_min_size = Vector2( 0, 2 )

[node name="Options" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 322.0
margin_right = 586.0
margin_bottom = 322.0

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 326.0
margin_right = 586.0
margin_bottom = 386.0
rect_min_size = Vector2( 0, 60 )

[node name="Attack" type="Button" parent="Panel/VBoxContainer/Buttons"]
margin_right = 291.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Attack"

[node name="Cancel" type="Button" parent="Panel/VBoxContainer/Buttons"]
margin_left = 295.0
margin_right = 586.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Cancel"
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
